style(solutions): bulb position

--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -19,5 +19,5 @@ import bulb from "../../images/bulb.webp"
         <h3 class="text-3xl">Site vitrine</h3>
         <p>Nous réalisons des sites vitrine afin d'améliorer votre présence sur Internet. Le site vitrine permet d'être trouvé lors de recherche sur Google et de donner les informations importantes.</p>
     </div>
-    <img class="absolute right-0 hidden w-56 lg:block 2xl:-right-20 -rotate-12 top-32" src={bulb} alt="">
+    <img class="absolute right-0 hidden w-56 lg:block 2xl:-right-20 -rotate-12 -top-32" src={bulb} alt="">
 </section>
