--- a/src/components/molecules/Nav.astro
+++ b/src/components/molecules/Nav.astro
@@ -27,7 +27,7 @@ const links = [
     </figure>
     <div id="menu" class="fixed top-0 left-0 z-20 flex flex-col items-center w-screen h-screen gap-12 pt-20 text-lg transition-all -translate-x-full bg-opacity-90 md:pt-0 md:flex-row md:translate-x-0 md:h-auto md:w-auto bg-lwhite md:relative text-grey-dark"> 
         {links.map(link=>
-                    <a href={link.href} class={"transition hover:underline " + ((url.pathname == link.href) ? 'text-primary' : 'hover:text-primary')}>{link.name}</a>
+                    <a href={link.href} class={"transition hover:underline " + (((url.pathname.startsWith(link.href) && link.href != "/") || (link.href == "/" &&  link.href == url.pathname)) ? 'text-primary' : 'hover:text-primary')}>{link.name}</a>
         )}
     </div>
     <button id="toggle-menu" class="z-30 md:hidden">
