--- a/src/components/molecules/ProjectHeader.astro
+++ b/src/components/molecules/ProjectHeader.astro
@@ -1,10 +1,9 @@
 ---
-const {mockup, title, type, date, description} = Astro.props
+const {mockup, title, type, date, description, slug} = Astro.props
 ---
-<section class="flex flex-col max-w-6xl px-4 mx-auto lg:flex-row gap-14 mt-14 lg:px-0">
-    <figure class="flex items-center justify-center row-span-3 lg:bg-primary-lighter rounded-3xl">
-        <img src={mockup} alt="">
-        d
+<section class="flex flex-col items-center max-w-6xl px-4 mx-auto lg:flex-row gap-14 mt-14 lg:px-0">
+    <figure class="flex items-center justify-center row-span-3 p-10 h-80 w-80 lg:bg-primary-lighter rounded-3xl">
+        <img src={"/portfolio/" + slug + "/" + mockup} alt="">
     </figure>
     <div class="flex flex-col gap-4 lg:gap-10">
         <h1 class="text-5xl">{title}</h1>
