--- a/src/components/molecules/WhoAreWe.astro
+++ b/src/components/molecules/WhoAreWe.astro
@@ -4,6 +4,6 @@
     <p>Nous sommes une équipe de trois personnes qui ont à cœur de défendre une vision du web moderne. Sur l’ensemble de nos projets, nous mettons en priorité le respect de la vie privée des utilisateurs. Et nous mettons tout en œuvre pour optimiser le poids de nos projets afin de minimiser l’impacte écologique des serveurs.
     </p>
     <figure class="overflow-hidden rounded-3xl lg:ml-7 mt-14">
-        <img class="object-contain w-full" src="https://via.placeholder.com/500x600" alt="">
+        <img class="object-contain w-full" src="/qui-sommes-nous.webp" alt="">
     </figure>
 </section>
