--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -8,7 +8,7 @@ import bulb from "../../images/bulb.webp"
         <h3 class="text-3xl">Application web</h3>
         <p>Une application web permet de mettre en place un service sans que son utilisateur n'ait besoin de télécharger l'application sur son ordinateur. Par exemple un configurateur en ligne ou encore un système de gestion.</p>
         <figure>
-            <img src="https://via.placeholder.com/150x150" alt="">
+            <img src="/portfolio/mon-cv/mockup-mon-cv-app.png" alt="">
         </figure>
     </div>
     <div id="e-commerce" class="flex flex-col gap-4 p-4 lg:p-12 lg:bg-primary-darker lg:rounded-3xl lg:text-lwhite">
@@ -19,5 +19,5 @@ import bulb from "../../images/bulb.webp"
         <h3 class="text-3xl">Site vitrine</h3>
         <p>Nous réalisons des sites vitrine afin d'améliorer votre présence sur Internet. Le site vitrine permet d'être trouvé lors de recherche sur Google et de donner les informations importantes.</p>
     </div>
-    <img class="absolute right-0 hidden w-56 lg:block 2xl:-right-20 -rotate-12 -top-32" src={bulb} alt="">
+    <img class="absolute hidden w-56 right-5 lg:block 2xl:-right-20 -rotate-12 -top-32" src={bulb} alt="">
 </section>
