--- a/src/components/molecules/WhatIsLoak.astro
+++ b/src/components/molecules/WhatIsLoak.astro
@@ -1,6 +1,6 @@
 <section class="flex flex-col items-center max-w-6xl gap-10 px-4 mx-auto mt-36 lg:items-start lg:flex-row lg:px-0">
-    <figure>
-        <img src="https://via.placeholder.com/500x500" alt="">
+    <figure class=" lg:w-96">
+        <img src="/computer-dynamic-clay.png" alt="">
     </figure>
     <div class="flex flex-col gap-4 lg:p-8">
         <h2 class="text-5xl">loak.studio c'est quoi?</h2>
