--- a/src/pages/realisations/[slug].astro
+++ b/src/pages/realisations/[slug].astro
@@ -1,6 +1,8 @@
 ---
 import Main from "../../layouts/Main.astro"
 import ProjectHeader from "../../components/molecules/ProjectHeader.astro"
+import Breadcrumb from "../../components/molecules/Breadcrumb.astro"
+import Ctacontact from "../../components/molecules/Ctacontact.astro"
 export async function getStaticPaths() {
   const data = await Astro.glob('../../data/portfolio/*.md')
   data.forEach(d=>{
@@ -18,9 +20,11 @@ export async function getStaticPaths() {
 }
 const {project} = Astro.props
 ---
-<Main>
+<Main title={project.frontmatter.title} description={project.frontmatter.description}>
+    <Breadcrumb link={{title:'Réalisations',href:"/realisations"}} current={project.frontmatter.title}/>
     <ProjectHeader {...project.frontmatter}/>
-    <article id="md" class="px-4 mt-36 md:px-0">
+    <article id="md" class="max-w-6xl px-4 mx-auto mt-36">
         <project.Content/>
     </article>
+    <Ctacontact/>
 </Main>
