--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -22,12 +22,15 @@ a,button{
     @apply rounded-md focus:outline-none focus-visible:ring focus-visible:ring-primary;
 }
 
-#md p, #md h2{
-    @apply max-w-6xl mx-auto;
+#md p{
+    @apply max-w-[64ch];
 }
+
 #md h2{
     @apply my-6 text-4xl;
 }
+
+
 #md p img{
-    @apply w-full max-w-7xl;
+    @apply my-12 lg:my-36 rounded-3xl;
 }
