--- a/src/pages/send.astro
+++ b/src/pages/send.astro
@@ -14,7 +14,7 @@ const loakStyle = commonStyle + "rounded-br-lg bg-lwhite self-start"
     <div action="/message-send" name="contact" data-netlify="true" class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto shadow-lg lg:px-16 lg:py-24 bg-lgrey-light lg:rounded-3xl">
     <h2 class="text-5xl text-center">Nous avons bien reçu votre message</h2>
     <p class="text-center">Nous vous répondrons dès que possible</p>
-    <CustomButton classes="self-center" outline={true}>
+    <CustomButton href="/" classes="self-center" outline={true}>
         Retour à l'accueil
     </CustomButton>
     <img class="absolute hidden lg:block bottom-8 -left-20 w-52" src={bubble} alt="">
