feat(footer): links

--- a/src/components/molecules/Footer.astro
+++ b/src/components/molecules/Footer.astro
@@ -23,15 +23,15 @@ const contact = [
 const social = [
     {
         icon:'github',
-        href:'#'
+        href:'https://github.com/loakstudio'
     },
     {
         icon:'linkedin',
-        href:'#'
+        href:'https://www.linkedin.com/company/loakstudio'
     },
     {
         icon:'instagram',
-        href:'#'
+        href:'https://instagram.com/loakstudio'
     },
 ]
 
