style(ctacontact): hidden sm

--- a/src/components/molecules/Ctacontact.astro
+++ b/src/components/molecules/Ctacontact.astro
@@ -16,5 +16,5 @@ Prenons contact et parlons-en !
     <a class="before:absolute before:inset-0" href="/contact">
                 
             </a>
-            <Icon name="right" classes="absolute right-10 bottom-10 group-hover:right-8 transition-all"/>
+            <Icon name="right" classes="absolute hidden md:block right-10 bottom-10 group-hover:right-8 transition-all"/>
 </section>
