--- a/src/components/molecules/Footer.astro
+++ b/src/components/molecules/Footer.astro
@@ -22,10 +22,6 @@ const contact = [
 
 const social = [
     {
-        icon:'github',
-        href:'https://github.com/loakstudio'
-    },
-    {
         icon:'linkedin',
         href:'https://www.linkedin.com/company/loakstudio'
     },
@@ -65,7 +61,7 @@ const navlinks = [
     <div class="flex flex-col items-center text-right md:items-end">
         <div class="flex text-lwhite">
         {social.map(link=>
-            <a class="transition-all hover:text-primary" target="_blank" href="https://github.com/loakstudio">
+            <a class="transition-all hover:text-primary" target="_blank" href={link.href}>
                 <Icon name={link.icon}/>
             </a>
         )}
