feat(hero): animation

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -35,7 +35,7 @@ const image = url.href + "share.png"
     <link rel="canonical" href={Astro.canonicalURL}>
     <script async defer src="https://nullitics.com/script.js"></script>
 </head>
-<body class="flex flex-col min-h-screen bg-lwhite">
+<body class="flex flex-col min-h-screen overflow-x-hidden bg-lwhite">
 <Nav/>
      <div class="flex-1">
      <slot />
