--- a/src/components/molecules/Hero.astro
+++ b/src/components/molecules/Hero.astro
@@ -7,12 +7,12 @@ import figma from "../../images/hero/figma-dynamic-clay.png"
 import lock from "../../images/hero/lock-dynamic-clay.png"
 import bag from "../../images/hero/bag-dynamic-clay.png"
 ---
-<section id="hero" class="px-4 md:px-0 overflow-hidden relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
-    <img class="hero-image md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]" src={mail} alt="">
-    <img class="hero-image absolute w-52 -rotate-[14deg] left-7 top-12" src={computer} alt="">
-    <img class="hero-image absolute w-36 rotate-[35deg] right-0 top-40 blur-[2px]" src={figma} alt="">
-    <img class="hero-image absolute rotate-[40deg] w-36 left-0 bottom-10 blur-[3px]" src={lock} alt="">
-    <img class="hero-image md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64" src={bag} alt="">
+<section id="hero" class="px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
+    <img id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]" src={mail} alt="">
+    <img id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12" src={computer} alt="">
+    <img id="figma" class="absolute w-36 rotate-[35deg] right-0 top-40 blur-[2px]" src={figma} alt="">
+    <img id="lock" class="absolute rotate-[40deg] w-36 left-0 bottom-10 blur-[3px]" src={lock} alt="">
+    <img id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64" src={bag} alt="">
     <div class="relative z-10 flex flex-col items-center gap-10">
         <h1 class="max-w-3xl text-5xl leading-tight text-center md:text-8xl">Vos projets, au pixel près</h1>
         <p class="max-w-xl text-center text-lgrey-dark">Plus qu'une agence, nous aidons nos clients à réaliser leurs projets avec la solution que leur convient</p>
