--- a/src/components/molecules/Process.astro
+++ b/src/components/molecules/Process.astro
@@ -21,7 +21,7 @@ const steps = [
 ---
 
 <section class="relative max-w-6xl grid-cols-3 px-4 mx-auto lg:grid mt-36 gap-14 lg:px-0">
-    <div class="flex flex-col gap-4">
+    <div class="sticky z-20 flex flex-col self-start gap-4 bg-white top-5 bg-opacity-80">
         <h2 class="text-5xl">
             Notre processus de travail
         </h2>
