--- a/src/components/molecules/Process.astro
+++ b/src/components/molecules/Process.astro
@@ -7,21 +7,21 @@ const steps = [
     },
     {
         title:"Design UX",
-        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L’objectif étant de trouver quelle technologie sera la plus pertinente et quel sera l’expérience utilisateur la plus efficiente.",
+        text:"Afin que les utilisateurs de votre projet soient le plus à même de l’utiliser, une étude de cas est réalisée. Ensuite, nous créerons des wireframes puis quelques maquettes. Le tout prototypé ce ce qui permettra de réaliser des tests utilisateurs.",
     },
     {
         title:"Développement",
-        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L’objectif étant de trouver quelle technologie sera la plus pertinente et quel sera l’expérience utilisateur la plus efficiente.",
+        text:"Une fois l'expérience conçue et selon votre projet, nous ferons des choix techniques qui offriront les meilleures performances pour votre site/application et assurant une maintenabilité dans le temps.",
     },
     {
         title:"Mise en production",
-        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L’objectif étant de trouver quelle technologie sera la plus pertinente et quel sera l’expérience utilisateur la plus efficiente.",
+        text:"Une fois que tout est prêt, nous mettons en ligne le projet en s'assurant que tout fonctionne comme prévu.",
     }
 ]
 ---
 
 <section class="relative max-w-6xl grid-cols-3 px-4 mx-auto lg:grid mt-36 gap-14 lg:px-0">
-    <div class="z-20 flex flex-col self-start gap-4 bg-white md:sticky top-5 bg-opacity-80">
+    <div class="z-20 flex flex-col self-start gap-4 p-2 bg-white rounded-md md:sticky top-5 bg-opacity-80">
         <h2 class="text-5xl">
             Notre processus de travail
         </h2>
