--- a/src/components/molecules/WhatIsLoak.astro
+++ b/src/components/molecules/WhatIsLoak.astro
@@ -4,7 +4,7 @@
     </figure>
     <div class="flex flex-col gap-4 lg:p-8">
         <h2 class="text-5xl">loak.studio c'est quoi?</h2>
-        <p class="max-w-[64ch]">Loak.studio est une agence web localisée en Belgique, à Tournai. Nous avons pour objectif de créer des solutions éthiques, sur mesure et dont vos utilisateurs se souviendrons. </p>
+        <p class="max-w-[64ch]">Loak.studio est une agence web localisée à Tournai en Belgique. Nous avons pour objectif de créer des solutions éthiques, sur mesure et dont vos utilisateurs se souviendront. </p>
         <p class="max-w-[64ch]">Tout est possible quand on est bien entouré !</p>
     </div>
 </section>
