fix(hero): orthographe

--- a/src/components/molecules/Hero.astro
+++ b/src/components/molecules/Hero.astro
@@ -15,7 +15,7 @@ import bag from "../../images/hero/bag-dynamic-clay.png"
     <img id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64" src={bag} alt="">
     <div class="relative z-10 flex flex-col items-center gap-10">
         <h1 class="max-w-3xl text-5xl leading-tight text-center md:text-8xl">Vos projets, au pixel près</h1>
-        <p class="max-w-xl text-center text-lgrey-dark">Plus qu'une agence, nous aidons nos clients à réaliser leurs projets avec la solution que leur convient</p>
+        <p class="max-w-xl text-center text-lgrey-dark">Plus qu'une agence, nous aidons nos clients à réaliser leurs projets avec la solution qui leur convient</p>
         <div class="flex flex-col gap-4 md:gap-10 md:flex-row">
             <CustomButton href="/contact">
                 Demander un devis
