--- a/src/components/molecules/WhoAreWe.astro
+++ b/src/components/molecules/WhoAreWe.astro
@@ -1,6 +1,6 @@
 <section class="items-center w-full max-w-6xl grid-cols-2 px-4 mx-auto lg:grid mt-36 lg:px-0">
     <h2 class="col-span-2 mb-4 text-5xl text-center">Qui sommes-nous?</h2>
-    <span class="col-span-2 text-center">Chaque nouveau projet pour notre équipe est un nouveau challenge a relever.</span>
+    <!-- <span class="col-span-2 text-center">Chaque nouveau projet pour notre équipe est un nouveau challenge a relever.</span> -->
     <p>Nous sommes une équipe de trois personnes qui ont à cœur de défendre une vision du web moderne. Sur l’ensemble de nos projets, nous mettons en priorité le respect de la vie privée des utilisateurs. Et nous mettons tout en œuvre pour optimiser le poids de nos projets afin de minimiser l’impacte écologique des serveurs.
     </p>
     <figure class="overflow-hidden rounded-3xl lg:ml-7 mt-14">
