--- a/src/components/molecules/Footer.astro
+++ b/src/components/molecules/Footer.astro
@@ -66,6 +66,6 @@ const navlinks = [
             </a>
         )}
         </div>
-        <p class="text-lwhite">&copy; {date.getFullYear()} loak.studio - Tous droits réservés</p>
+        <p class="mt-2 text-lwhite">&copy; {date.getFullYear()} loak.studio - Tous droits réservés</p>
     </div>
 </footer>
