--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -4,10 +4,10 @@ import bulb from "../../images/bulb.webp"
 
     <h2 class="h-auto col-span-2 mb-20 text-5xl text-center mt-36">Nos solutions</h2>
 <section class="relative max-w-6xl grid-cols-2 grid-rows-2 gap-6 mx-auto lg:grid ">
-    <div id="web-app" class="flex flex-col row-span-2 gap-4 p-4 lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
+    <div id="web-app" class="flex flex-col items-center justify-between row-span-2 gap-4 p-4 lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
         <h3 class="text-3xl">Application web</h3>
         <p>Une application web permet de mettre en place un service sans que son utilisateur n'ait besoin de télécharger l'application sur son ordinateur. Par exemple un configurateur en ligne ou encore un système de gestion.</p>
-        <figure>
+        <figure class="max-w-xs ">
             <img src="/portfolio/mon-cv/mockup-mon-cv-app.png" alt="">
         </figure>
     </div>
