--- a/src/components/molecules/WhatIsLoak.astro
+++ b/src/components/molecules/WhatIsLoak.astro
@@ -1,4 +1,4 @@
-<section class="flex flex-col items-center max-w-6xl gap-10 px-4 mx-auto mt-36 lg:items-start lg:flex-row lg:px-0">
+<section class="flex flex-col items-center max-w-6xl gap-10 px-4 mx-auto mt-36 lg:flex-row lg:px-0">
     <figure class=" lg:w-96">
         <img src="/computer-dynamic-clay.png" alt="">
     </figure>
