--- a/src/pages/realisations/[slug].astro
+++ b/src/pages/realisations/[slug].astro
@@ -23,7 +23,7 @@ const {project} = Astro.props
 <Main title={project.frontmatter.title} description={project.frontmatter.description}>
     <Breadcrumb link={{title:'Réalisations',href:"/realisations"}} current={project.frontmatter.title}/>
     <ProjectHeader {...project.frontmatter}/>
-    <article id="md" class="max-w-6xl px-4 mx-auto mt-36">
+    <article id="md" class="px-4 mt-36 max-w-[64ch] mx-auto">
         <project.Content/>
     </article>
     <Ctacontact/>
