--- a/src/components/molecules/Process.astro
+++ b/src/components/molecules/Process.astro
@@ -3,7 +3,7 @@ import pencil from "../../images/pencil.webp"
 const steps = [
     {
         title:"Analyse de vos besoins",
-        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L’objectif étant de trouver quelle technologie sera la plus pertinente et quel sera l’expérience utilisateur la plus efficiente.",
+        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L’objectif étant de trouver quelle technologie sera la plus pertinente et quelle sera l’expérience utilisateur la plus efficiente.",
     },
     {
         title:"Design UX",
