feat: picture & text

--- a/src/components/molecules/OurRealizations.astro
+++ b/src/components/molecules/OurRealizations.astro
@@ -7,7 +7,7 @@ import Icon from "../atoms/Icon.astro"
         <p class="lg:max-w-[30ch]">Nous travaillons sur une multitude de projets web, venez les découvrir</p>
     </div>
     <figure class="w-full lg:w-auto">
-        <img class="w-full lg:w-auto" src="/portfolio/saveurbelge/img-saveur-belge.png" alt="">
+        <img class="w-full lg:w-auto" src="/saveurbelge.png" alt="Mockup représentant l'application web SaveurBelge">
     <a href="/realisations" class="before:absolute before:inset-0"></a>
     </figure>
     <Icon name="right" classes="absolute right-10 bottom-10 group-hover:right-8 transition-all" />
