--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -6,18 +6,18 @@ import bulb from "../../images/bulb.webp"
 <section class="relative max-w-6xl grid-cols-2 grid-rows-2 gap-6 mx-auto lg:grid ">
     <div id="web-app" class="flex flex-col items-center justify-between row-span-2 gap-4 p-4 lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
         <h3 class="text-3xl">Application web</h3>
-        <p>Une application web permet de mettre en place un service sans que son utilisateur n'ait besoin de télécharger l'application sur son ordinateur. Par exemple un configurateur en ligne ou encore un système de gestion.</p>
+        <p>Notre équipe de développeur est capable de développeur votre application web <strong>sur mesure</strong>. Nous ne sommes pas limités par l'utilisateur de CMS tiers donc <strong>tout est envisageable pour répondre au mieux à votre problématique.</strong></p>
         <figure class="max-w-xs ">
             <img src="/portfolio/mon-cv/mockup-mon-cv-app.png" alt="">
         </figure>
     </div>
     <div id="e-commerce" class="flex flex-col gap-4 p-4 lg:p-12 lg:bg-primary-darker lg:rounded-3xl lg:text-lwhite">
         <h3 class="text-3xl">e-commerce</h3>
-        <p>Les sites web e-commerce permettent de vendre vos produits à travers le monde de manière simple et efficace. Pas besoin de grosse structure, nous avons la solution relative à vos besoins.</p>
+        <p>Les sites web e-commerce permettent de vendre vos produits à travers le monde de manière efficace et automatisée. Pas besoin de grosse structure, nous avons la solution qui correspond à votre problème.</p>
     </div>
     <div id="site-vitrine" class="flex flex-col gap-4 p-4 lg:p-12 lg:bg-lgrey-light lg:rounded-3xl">
         <h3 class="text-3xl">Site vitrine</h3>
-        <p>Nous réalisons des sites vitrine afin d'améliorer votre présence sur Internet. Le site vitrine permet d'être trouvé lors de recherche sur Google et de donner les informations importantes.</p>
+        <p><strong>A votre image</strong> et selons votre désire, nous designons et codons votre site internet. De cette manière, il correspondra à vos attentes et celles de votre marché et sera <strong>optimisé</strong> en terme de performance et de SEO.</p>
     </div>
     <img class="absolute hidden w-56 right-5 lg:block 2xl:-right-20 -rotate-12 -top-32" src={bulb} alt="">
 </section>
