--- a/src/components/molecules/Process.astro
+++ b/src/components/molecules/Process.astro
@@ -3,11 +3,11 @@ import pencil from "../../images/pencil.webp"
 const steps = [
     {
         title:"Analyse de vos besoins",
-        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L’objectif étant de trouver quelle technologie sera la plus pertinente et quelle sera l’expérience utilisateur la plus efficiente.",
+        text:"Après un premier rendez-vous, nous analysons votre projet et cherchons la meilleure façon dont nous allons travailler. L'objectif étant de concevoir le parcours d'un utilisateur jusqu'à votre objectif.",
     },
     {
         title:"Design UX",
-        text:"Afin que les utilisateurs de votre projet soient le plus à même de l’utiliser, une étude de cas est réalisée. Ensuite, nous créerons des wireframes puis quelques maquettes. Le tout prototypé ce ce qui permettra de réaliser des tests utilisateurs.",
+        text:"Afin d'avoir l'expérience la plus fluide possible, nous réalisons une étude de cas. Des informations tirées, nous créons des wireframes (sorte de schéma) qui nous amènent à la réalisions d'une maquette interactive qui permet au client d'avoir un ressenti réel de ce que sera son projet.",
     },
     {
         title:"Développement",
