--- a/src/components/molecules/Project.astro
+++ b/src/components/molecules/Project.astro
@@ -5,11 +5,11 @@ import Icon from "../atoms/Icon.astro"
 const {slug,mockup,icon,title,description,type} = Astro.props
 ---
             <div class="relative flex flex-col items-center w-full max-w-6xl p-4 mx-auto mt-24 transition-all shadow-lg lg:p-16 group lg:flex-row gap-14 bg-lgrey-light rounded-3xl">
-                <figure class="w-full max-w-sm ">
-                    <img src={"/portfolio/" + slug + "/" + mockup} alt="">
+                <figure class="w-full max-w-sm max-h-80">
+                    <img class="object-cover h-full" src={"/portfolio/" + slug + "/" + mockup} alt="">
                 </figure>
                 <div class="flex flex-col gap-6">
-                    <figure>
+                    <figure class="w-16">
                         <img src={"/portfolio/" + slug + "/" + icon} alt="">
                     </figure>
                     <h2 class="text-5xl">{title}</h2>
