--- a/src/components/molecules/WhoAreWe.astro
+++ b/src/components/molecules/WhoAreWe.astro
@@ -1,9 +1,11 @@
 <section class="items-center w-full max-w-6xl grid-cols-2 px-4 mx-auto lg:grid mt-36 lg:px-0">
     <h2 class="col-span-2 mb-4 text-5xl text-center">Qui sommes-nous?</h2>
     <!-- <span class="col-span-2 text-center">Chaque nouveau projet pour notre équipe est un nouveau challenge a relever.</span> -->
-    <p>Nous sommes une équipe de trois personnes qui ont à cœur de défendre une vision du web moderne. Sur l’ensemble de nos projets, nous mettons en priorité le respect de la vie privée des utilisateurs. Et nous mettons tout en œuvre pour optimiser le poids de nos projets afin de minimiser l’impacte écologique des serveurs.
+    <p>Nous sommes une équipe de trois personnes, <a class="font-bold hover:underline" href="https://galandtristan.be" target="_blank">Tristan Galand</a>, <a class="font-bold hover:underline" href="https://geets.dev" target="_blank">Benjamin Geets</a> et <a class="font-bold hover:underline" href="https://mlava.dev" target="_blank">Mathieu Lava</a>, qui ont à cœur de défendre une vision du web moderne. 
+    Nous avons chacun notre spécialité, du code au design d'interface, ce qui nous permet d'être très versatile et de s'adapter aux envies et besoin de nos clients.
     </p>
-    <figure class="overflow-hidden rounded-3xl lg:ml-7 mt-14">
-        <img class="object-contain w-full" src="/qui-sommes-nous.webp" alt="">
+    <figure class="overflow-hidden lg:ml-7 mt-14">
+        <img class="object-contain w-full rounded-3xl" src="/equipe.jpg" alt="Equipe de Loak.studio">
+        <figcaption class="text-sm text-right text-gray-700">Notre équipe | <a class="hover:underline"  target="_blank" href="https://bertrandbourgy.com">&copy; Bertrand Bourgy</a></figcaption>
     </figure>
 </section>
