refactor: image size optimization

--- a/src/components/molecules/WhoAreWe.astro
+++ b/src/components/molecules/WhoAreWe.astro
@@ -5,7 +5,7 @@
     Nous avons chacun notre spécialité, du code au design d'interface, ce qui nous permet d'être très versatile et de s'adapter aux envies et besoin de nos clients.
     </p>
     <figure class="overflow-hidden lg:ml-7 mt-14">
-        <img class="object-contain w-full rounded-3xl" src="/equipe.jpg" alt="Equipe de Loak.studio">
+        <img loading="lazy" class="object-contain w-full rounded-3xl" src="/equipe.jpg" alt="Equipe de Loak.studio">
         <figcaption class="text-sm text-right text-gray-700">Notre équipe | <a class="hover:underline"  target="_blank" href="https://bertrandbourgy.com">&copy; Bertrand Bourgy</a></figcaption>
     </figure>
 </section>
