fix(layout): share image link

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -5,7 +5,7 @@ import "../style/tailwind.css"
 
 const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio - Création de sites web dans la région de Tournai | Belgique"} = Astro.props
 const url = new URL(Astro.request.url)
-const image = url.href + "share.png"
+const image = "https://loak.studio/share.png"
 ---
 <!DOCTYPE html>
 <html lang="fr">
