--- a/src/components/molecules/Project.astro
+++ b/src/components/molecules/Project.astro
@@ -5,8 +5,8 @@ import Icon from "../atoms/Icon.astro"
 const {slug,mockup,icon,title,description,type} = Astro.props
 ---
             <div class="relative flex flex-col w-full max-w-6xl p-4 mx-auto transition-all lg:items-center lg:mt-24 lg:shadow-lg lg:p-16 group lg:flex-row gap-14 bg-lgrey-light lg:rounded-3xl">
-                <figure class="w-full max-w-sm max-h-80">
-                    <img class="object-cover h-full" src={"/portfolio/" + slug + "/" + mockup} alt="">
+                <figure class="w-full max-w-sm">
+                    <img class="object-cover" src={"/portfolio/" + slug + "/" + mockup} alt="">
                 </figure>
                 <div class="flex flex-col gap-6">
                     <figure class="w-16">
