feat(project): mobile width

--- a/src/components/molecules/ProjectHeader.astro
+++ b/src/components/molecules/ProjectHeader.astro
@@ -1,8 +1,8 @@
 ---
 const {mockup, title, type, date, description, slug, href} = Astro.props
 ---
-<section class="flex flex-col items-center max-w-6xl px-4 mx-auto lg:flex-row gap-14 mt-14 lg:px-0">
-    <figure class="flex items-center justify-center row-span-3 p-10 h-80 w-80 lg:bg-primary-lighter rounded-3xl">
+<section class="flex flex-col items-center max-w-6xl gap-4 px-4 mx-auto lg:flex-row lg:gap-14 mt-14 lg:px-0">
+    <figure class="flex items-center justify-center row-span-3 lg:p-10 h-80 w-80 lg:bg-primary-lighter rounded-3xl">
         <img src={"/portfolio/" + slug + "/" + mockup} alt="">
     </figure>
     <div class="flex flex-col gap-4 lg:gap-10">
