--- a/src/components/molecules/Project.astro
+++ b/src/components/molecules/Project.astro
@@ -4,18 +4,18 @@ import Icon from "../atoms/Icon.astro"
 
 const {slug,mockup,icon,title,description,type} = Astro.props
 ---
-            <div class="relative flex flex-col w-full max-w-6xl p-4 mx-auto transition-all lg:items-center lg:mt-24 lg:shadow-lg lg:p-16 group lg:flex-row gap-14 bg-lgrey-light lg:rounded-3xl">
+            <div class="relative flex flex-col w-full max-w-6xl p-4 mx-auto mt-4 transition-all lg:items-center lg:mt-24 lg:shadow-lg lg:p-16 group lg:flex-row lg:gap-14 bg-lgrey-light lg:rounded-3xl">
                 <figure class="w-full max-w-sm">
                     <img class="object-cover" src={"/portfolio/" + slug + "/" + mockup} alt="">
                 </figure>
                 <div class="flex flex-col gap-6">
-                    <figure class="w-16">
+                    <figure class="hidden w-16 lg:block">
                         <img src={"/portfolio/" + slug + "/" + icon} alt="">
                     </figure>
                     <h2 class="text-5xl">{title}</h2>
                     <p class="max-w-[64ch]">{description}</p>
                     <span class="self-start p-1 rounded bg-primary text-lwhite">{type}</span>
                 </div>
-                <Icon name="right" classes="absolute right-10 bottom-10 group-hover:right-8 transition-all"/>
+                <Icon name="right" classes="absolute right-2 bottom-2 lg:right-10 lg:bottom-10 group-hover:right-8 transition-all"/>
                 <a class="before:absolute before:inset-0" href={"/realisations/" + slug}></a>
             </div>
