--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -19,5 +19,5 @@ import bulb from "../../images/bulb.webp"
         <h3 class="text-3xl">Site vitrine</h3>
         <p><strong>A votre image</strong> et selons votre désire, nous designons et codons votre site internet. De cette manière, il correspondra à vos attentes et celles de votre marché et sera <strong>optimisé</strong> en terme de performance et de SEO.</p>
     </div>
-    <img class="hidden absolute right-5 -top-32 w-56 -rotate-12 lg:block 2xl:-right-20" src={bulb} alt="">
+    <img id="bulb" class="hidden absolute right-5 -top-32 w-56 -rotate-12 lg:block 2xl:-right-20" src={bulb} alt="">
 </section>
