--- a/src/components/molecules/Process.astro
+++ b/src/components/molecules/Process.astro
@@ -20,8 +20,8 @@ const steps = [
 ]
 ---
 
-<section class="relative max-w-6xl grid-cols-3 px-4 mx-auto lg:grid mt-36 gap-14 lg:px-0">
-    <div class="z-20 flex flex-col self-start gap-4 p-2 bg-white rounded-md md:sticky top-5 bg-opacity-80">
+<section class="relative grid-cols-3 gap-14 px-4 mx-auto mt-36 max-w-6xl lg:grid lg:px-0">
+    <div class="flex top-5 z-20 flex-col gap-4 self-start p-2 bg-white bg-opacity-80 rounded-md md:sticky">
         <h2 class="text-5xl">
             Notre processus de travail
         </h2>
@@ -29,7 +29,7 @@ const steps = [
             Chaque nouveau projet pour notre équipe est un nouveau challenge à relever. Nous travaillons depuis plusieurs années sur de nombreux projets et proposons à nos clients une dynamique de travail élaborée.
         </p>
     </div>
-    <div class="relative flex flex-col col-span-2 gap-12 pl-5 mt-10 border-l-2 lg:mt-0 border-primary-darker">
+    <div class="flex relative flex-col col-span-2 gap-12 pl-5 mt-10 border-l-2 lg:mt-0 border-primary-darker">
         {steps.map(step=>
             <div class="">
                 <h3 class="text-3xl before:w-[0.625rem] before:h-[0.625rem] before:absolute before:bg-primary-darker before:rounded-full before:mt-4 before:-left-[6px] before:border-2 before:border-lwhite">{step.title}</h3>
@@ -37,5 +37,5 @@ const steps = [
             </div>
         )}
     </div>
-    <img class="absolute left-0 hidden rotate-180 w-60 bottom-20 2xl:-left-32 lg:block" src={pencil} alt="">
+    <img id="pen" class="hidden absolute left-0 bottom-20 w-60 rotate-180 2xl:-left-32 lg:block" src={pencil} alt="">
 </section>
