style(404): image width

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,7 +16,7 @@ import bag from "../images/hero/bag-dynamic-clay.png"
         <img id="bag" class="md:block hidden absolute w-36 -rotate-[55deg] bottom-0 right-64" src={bag} alt="">
         <div class="relative z-10 flex flex-col items-center gap-10">
         <div>
-        <svg width="426" height="278" viewBox="0 0 426 278" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="w-full" width="426" height="278" viewBox="0 0 426 278" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <path d="M11.6477 182.17V167.682L75.5682 66.5455H86.0795V88.9886H78.9773L30.6818 165.409V166.545H116.761V182.17H11.6477ZM80.1136 212V177.767V171.02V66.5455H96.875V212H80.1136ZM308.718 182.17V167.682L372.638 66.5455H383.15V88.9886H376.048L327.752 165.409V166.545H413.832V182.17H308.718ZM377.184 212V177.767V171.02V66.5455H393.945V212H377.184Z" fill="black"/>
             <rect x="74" width="278" height="278" fill="url(#pattern0)"/>
             <defs>
