style(hero): add opacity 0 to fix glitch

--- a/src/components/molecules/Hero.astro
+++ b/src/components/molecules/Hero.astro
@@ -7,7 +7,7 @@ import figma from "../../images/hero/figma-dynamic-clay.png"
 import lock from "../../images/hero/lock-dynamic-clay.png"
 import bag from "../../images/hero/bag-dynamic-clay.png"
 ---
-<section id="hero" class="px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
+<section id="hero" class="opacity-0 px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
     <img id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]" src={mail} alt="">
     <img id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12" src={computer} alt="">
     <img id="figma" class="absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]" src={figma} alt="">
