fix(solutions): orthographe

--- a/src/components/molecules/OurSolutions.astro
+++ b/src/components/molecules/OurSolutions.astro
@@ -2,11 +2,11 @@
 import bulb from "../../images/bulb.webp"
 ---
 
-    <h2 class="col-span-2 mt-36 mb-20 h-auto text-5xl text-center">Nos solutions</h2>
-<section class="relative grid-cols-2 grid-rows-2 gap-6 mx-auto max-w-6xl lg:grid">
-    <div id="web-app" class="flex flex-col row-span-2 gap-4 justify-between items-center p-4 lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
+    <h2 class="h-auto col-span-2 mb-20 text-5xl text-center mt-36">Nos solutions</h2>
+<section class="relative max-w-6xl grid-cols-2 grid-rows-2 gap-6 mx-auto lg:grid">
+    <div id="web-app" class="flex flex-col items-center justify-between row-span-2 gap-4 p-4 lg:p-12 lg:bg-primary lg:rounded-3xl lg:text-lwhite">
         <h3 class="text-3xl">Application web</h3>
-        <p>Notre équipe de développeur est capable de développeur votre application web <strong>sur mesure</strong>. Nous ne sommes pas limités par l'utilisation de CMS tiers donc <strong>tout est envisageable pour répondre au mieux à votre problématique.</strong></p>
+        <p>Notre équipe de développeur est capable de développer votre application web <strong>sur mesure</strong>. Nous ne sommes pas limités par l'utilisation de CMS tiers donc <strong>tout est envisageable pour répondre au mieux à votre problématique.</strong></p>
         <figure class="max-w-xs">
             <img src="/portfolio/mon-cv/mockup.png" alt="">
         </figure>
@@ -17,7 +17,7 @@ import bulb from "../../images/bulb.webp"
     </div>
     <div id="site-vitrine" class="flex flex-col gap-4 p-4 lg:p-12 lg:bg-lgrey-light lg:rounded-3xl">
         <h3 class="text-3xl">Site vitrine</h3>
-        <p><strong>A votre image</strong> et selons votre désire, nous designons et codons votre site internet. De cette manière, il correspondra à vos attentes et celles de votre marché et sera <strong>optimisé</strong> en terme de performance et de SEO.</p>
+        <p><strong>A votre image</strong> et selons vos désires, nous designons et codons votre site internet. De cette manière, il correspondra à vos attentes et celles de votre marché et sera <strong>optimisé</strong> en terme de performance et de SEO.</p>
     </div>
-    <img id="bulb" class="hidden absolute right-5 -top-32 w-56 -rotate-12 lg:block 2xl:-right-20" src={bulb} alt="">
+    <img id="bulb" class="absolute hidden w-56 right-5 -top-32 -rotate-12 lg:block 2xl:-right-20" src={bulb} alt="">
 </section>
