feat(whatisloak): replace old image

--- a/src/components/molecules/WhatIsLoak.astro
+++ b/src/components/molecules/WhatIsLoak.astro
@@ -1,6 +1,9 @@
+---
+import computer from "../../images/hero/computer-dynamic-clay.png"
+---
 <section class="flex flex-col items-center max-w-6xl gap-10 px-4 mx-auto mt-36 lg:flex-row lg:px-0">
     <figure class=" lg:w-96">
-        <img src="/computer-dynamic-clay.png" alt="">
+        <img src={computer} alt="">
     </figure>
     <div class="flex flex-col gap-4 lg:p-8">
         <h2 class="text-5xl">loak.studio c'est quoi?</h2>
