--- a/src/components/molecules/Contactform.astro
+++ b/src/components/molecules/Contactform.astro
@@ -17,12 +17,12 @@ const loakStyle = commonStyle + "rounded-br-lg bg-lwhite self-start"
         </p>
     </div>
     <p class={answerStyle + " " + "message"}>Bonjour loak</p>
-    <div class={answerStyle + " " +"message outline outline-offset-2 focus-within:outline-primary-darker"}>
+    <div class={answerStyle + " " +"message focus-within:outline focus-within:outline-offset-2 focus-within:outline-primary-darker"}>
         <label for="name">Je m'appelle</label>
         <input required placeholder="Thomas" class="text-right bg-transparent focus:outline-none placeholder:text-primary-lightest" type="text" name="name" id="name">
     </div>
-    <textarea required name="content" class={answerStyle + " " + " outline outline-offset-2 focus:outline-primary-darker w-full max-w-2xl p-5 placeholder:text-primary-lightest message"} placeholder="Je vous contacte pour..." id="" rows={4}></textarea>
-    <div class={answerStyle + " flex flex-col items-end message outline outline-offset-2 focus-within:outline-primary-darker"}>
+    <textarea required name="content" class={answerStyle + " " + " focus:outline focus:outline-offset-2 focus:outline-primary-darker w-full max-w-2xl p-5 placeholder:text-primary-lightest message"} placeholder="Je vous contacte pour..." id="" rows={4}></textarea>
+    <div class={answerStyle + " flex flex-col items-end message focus-within:outline focus-within:outline-offset-2 focus-within:outline-primary-darker"}>
         <label  for="email">Vous pouvez me répondre ici: </label>
         <input required placeholder="thomas@example.org" class="text-right bg-transparent focus:outline-none placeholder:text-primary-lightest" type="email" name="email" id="email">
     </div>
