--- a/src/components/molecules/Footer.astro
+++ b/src/components/molecules/Footer.astro
@@ -38,11 +38,15 @@ const navlinks = [
     },
     {
         label:"Réalisations",
-        href:"/realisations"
+        href:"/realisations/"
+    },
+    {
+        label:"Blog",
+        href:"/blog/"
     },
     {
         label:"Contact",
-        href:"/contact"
+        href:"/contact/"
     },
 ]
 
