--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -3,9 +3,8 @@ import Nav from "../components/molecules/Nav.astro"
 import Footer from "../components/molecules/Footer.astro"
 import "../style/tailwind.css"
 
-const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio - Création de sites web dans la région de Tournai | Belgique"} = Astro.props
+const {title = "loak.studio - Création de sites web dans la région de Tournai | Belgique",description = "loak.studio - Création de sites web dans la région de Tournai | Belgique", image = "https://loak.studio/share.png"} = Astro.props
 const url = new URL(Astro.request.url)
-const image = "https://loak.studio/share.png"
 ---
 <!DOCTYPE html>
 <html lang="fr">
