--- a/src/components/molecules/TagPicker.astro
+++ b/src/components/molecules/TagPicker.astro
@@ -2,7 +2,7 @@
 const {tags} = Astro.props
 ---
 
-<div class="flex w-full max-w-6xl px-4 mx-auto mt-20 gap-7 xl:px-0">
+<div class="flex flex-wrap w-full max-w-6xl px-4 mx-auto mt-20 gap-7 xl:px-0">
     <button class="p-3 transition border-2 rounded-lg hover:border-primary-darker"  data-tag-picker="all" data-active="true">
         Tous les articles
     </button>
