--- a/src/components/organisms/BlogList.astro
+++ b/src/components/organisms/BlogList.astro
@@ -1,7 +1,7 @@
 ---
  const {posts} = Astro.props
 ---
-<div id="blog" class="grid w-full max-w-6xl px-4 mx-auto mt-10 sm:grid-cols-2 lg:grid-cols-3 lg:px-0">
+<div id="blog" class="grid w-full max-w-6xl gap-4 px-4 mx-auto mt-10 md:grid-cols-3 lg:px-0">
 {posts.map(post=>
     <article data-post-tag={post.tag_list[0]} class="relative w-full p-2 transition md:max-w-xs rounded-2xl bg-lgrey-light hover:shadow-lg hover:-translate-y-2">
         <figure>
