--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -12,7 +12,7 @@ const url = new URL(Astro.request.url)
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{title} | loak.studio</title>
+    <title>{title}</title>
        
     <!-- Primary Meta Tags -->
     <meta name="title" content={title}>
