--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import figma from "../images/hero/figma-dynamic-clay.png"
 import lock from "../images/hero/lock-dynamic-clay.png"
 import bag from "../images/hero/bag-dynamic-clay.png"
 ---
-<Main>
+<Main title="Page introuvable | loak.studio">
     <section class="px-4 md:px-0 relative min-h-[80vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
         <img id="mail" class="md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]" src={mail} alt="">
         <img id="computer" class="absolute w-52 -rotate-[14deg] left-7 top-12" src={computer} alt="">
