--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,7 +14,7 @@ const articles = stories.slice(1)
 
 ---
 
-<Main>
+<Main title="Blog | loak.studio">
     <Breadcrumb current="Blog"/>
     <BlogHeader data={frontArticle}/>
     {articles.length > 0 &&
