--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Main from "../layouts/Main.astro"
 import Contactform from "../components/molecules/Contactform.astro"
 import Breadcrumb from "../components/molecules/Breadcrumb.astro"
 ---
-<Main title="Nous contacter">
+<Main title="Nous contacter | loak.studio">
     <Breadcrumb current="Contact"/>
     <Contactform/>
 </Main>
