--- a/src/pages/send.astro
+++ b/src/pages/send.astro
@@ -7,7 +7,7 @@ const commonStyle = "px-4 py-2 rounded-tl-lg rounded-tr-lg" + " "
 const answerStyle = commonStyle + "self-end rounded-bl-lg bg-primary-lighter text-lwhite"
 const loakStyle = commonStyle + "rounded-br-lg bg-lwhite self-start"
 ---
-<Main title="Message envoyé">
+<Main title="Message envoyé | loak.studio">
     <Breadcrumb link={{href:'/contact',title:"Contact"}} current="Message envoyé"/>
     <div action="/message-send" name="contact" data-netlify="true" class="relative flex flex-col max-w-6xl gap-3 p-4 mx-auto shadow-lg lg:px-16 lg:py-24 bg-lgrey-light lg:rounded-3xl">
     <h2 class="text-5xl text-center">Nous avons bien reçu votre message</h2>
