--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -28,7 +28,7 @@ const lastArticles = posts.slice(0,3)
 
 ---
 
-<Main title={currentPost.content.title} description={currentPost.content.intro} image={"https:"+currentPost.content.image}>
+<Main title={currentPost.content.title + " | loak.studio"} description={currentPost.content.intro} image={"https:"+currentPost.content.image}>
     <Breadcrumb link={{title:'Blog',href:"/blog/"}} current={currentPost.content.title}/>
     <div class="flex items-start justify-between w-full max-w-6xl px-4 mx-auto xl:px-0">
         <article id="blog-post" class="w-full relative max-w-[64ch]">
